# mds-bridge

./: CMakeLists.txt  README.md
.github/workflows/: appimage.yml
appimage/: README.md  build-appimage.sh  mds-bridge.desktop
demo/: CLIPCHAMP-PROMPT.md  QUICK-START.md  README-DEMO.md  TERMINAL-README.md  VIDEO-SCRIPT-MARKETING.md  VIDEO-SCRIPT.md  run-demo-macos.sh  run-demo.sh  setup-permissions.sh  slides-auto.sh  slides-loop.sh  slides-video.sh  slides.md
docs/: MDS_PROTOCOL_LENGTH_BYTE.md
examples/: CMakeLists.txt  README.md  mds_gateway.c  mds_gateway_demo.c  mds_monitor.c
examples/nodejs/: CMakeLists.txt  README.md  binding.gyp.in  bindings.js  index.js  mds-client.js  mds-native.js  node-hid-backend.js  package.json
examples/nodejs/src/: addon.c
examples/python/: README.md  bindings.py  hid_backend.py  main.py  mds_client.py  test_bindings.py
include/mds_bridge/: mds_protocol.h  platform_compat.h
include/memfault_hid/: chunks_uploader.h  mds_backend.h  mds_protocol.h  mds_protocol_internal.h
inspiration/device-code/: main.c
src/: chunks_uploader.c  mds_backend_hid.c  mds_backend_hid_internal.h  mds_protocol.c  memfault_hid.c  memfault_hid_internal.h  memfault_hid_transport.c
test/: CMakeLists.txt  mock_hidapi.c  mock_libcurl.c  stub_hidapi.c  test_client.c  test_mds_e2e.c  test_upload.c
